Implemented start of smpp manager

--- a/resources/smpp.conf
+++ b/resources/smpp.conf
@@ -13,7 +13,7 @@ password = testpw
 # bind_timeout
 # conn_loss_retry # retry on connection loss - default yes
 # conn_loss_delay # Reconnect delay
-# src_addr # Default source address
+## src_addr # Default source address
 src_ton = 1  # 0=Unknown, 1=International, 2=National, 3=Network specific, 4=Subscriber number, 5=Alphanumeric, 6=Abbreviated     Default 2
 src_npi = 1  # 0=Unknown, 1=ISDN, 3=Data, 4=Telex, 6=Land mobile, 8=National, 9=Private, 10=Ermes, 14=Internet, 18=WAP Client ID  Default 1
 dst_ton = 1  # Default 1
@@ -33,7 +33,7 @@ coding = 0  # 0=SMSC Default, 1=IA5 ASCII, 2=Octet unspecified, 3=Latin1, 4=Octe
 enquire_link_interval = 30
 replace_if_present_flag = 0
 dlr_msgid = 0 # Indicates how to read msg id when receiving a receipt: 0=msg id is identical in submit_sm_resp and deliver_sm, 1=submit_sm_resp msg-id is in hexadecimal base, deliver_sm msg-id is in decimal base, 2=submit_sm_resp msg-id is in decimal base, deliver_sm msg-id is in hexadecimal base.
-
+disabled = 0
 
 [filter:tag_filter1]
 type = tag
@@ -50,17 +50,17 @@ type = destaddr
 regex = ^44.+
 
 
-[route:20]
+[mt_route:20]
 type = static
 connector = smpp_conn3
 filters = tag_filter
 
 
-[route:10]
+[mt_route:10]
 type = static
 connector = smpp_conn2
 filters = uk_addr,tag_filter2
 
-[route:0]
+[mt_route:0]
 type = default
 connector = smpp_conn1
