Started on httpapi for smppmanager

--- a/resources/smpp.conf
+++ b/resources/smpp.conf
@@ -14,25 +14,31 @@ password = testpw
 # conn_loss_retry # retry on connection loss - default yes
 # conn_loss_delay # Reconnect delay
 ## src_addr # Default source address
-src_ton = 1  # 0=Unknown, 1=International, 2=National, 3=Network specific, 4=Subscriber number, 5=Alphanumeric, 6=Abbreviated     Default 2
-src_npi = 1  # 0=Unknown, 1=ISDN, 3=Data, 4=Telex, 6=Land mobile, 8=National, 9=Private, 10=Ermes, 14=Internet, 18=WAP Client ID  Default 1
-dst_ton = 1  # Default 1
-dst_npi = 1  # Default 1
-bind_ton = 1  # Default 0
-bind_npi = 1  # Default 1
 
-# validity = 1  # Default null
+# 0=Unknown, 1=International, 2=National, 3=Network specific, 4=Subscriber number, 5=Alphanumeric, 6=Abbreviated     Default 2
+src_ton = 1
+# 0=Unknown, 1=ISDN, 3=Data, 4=Telex, 6=Land mobile, 8=National, 9=Private, 10=Ermes, 14=Internet, 18=WAP Client ID  Default 1
+src_npi = 1
+
+dst_ton = 1
+dst_npi = 1
+bind_ton = 0
+bind_npi = 1
+
+# validity = 1
 priority = 0
 requeue_delay = 120
 # addr_range = ? # Default null
 # systype =  ? # system_type param, Default null
 dlr_expiry = 86400
-submit_throughput = 50  # Default 1
+submit_throughput = 50
 # proto_id = ? Default null
-coding = 0  # 0=SMSC Default, 1=IA5 ASCII, 2=Octet unspecified, 3=Latin1, 4=Octet unspecified common, 5=JIS, 6=Cyrillic, 7=ISO-8859-8, 8=UCS2, 9=Pictogram, 10=ISO-2022-JP, 13=Extended Kanji Jis, 14=KS C 5601  Default 0
+# 0=SMSC Default, 1=IA5 ASCII, 2=Octet unspecified, 3=Latin1, 4=Octet unspecified common, 5=JIS, 6=Cyrillic, 7=ISO-8859-8, 8=UCS2, 9=Pictogram, 10=ISO-2022-JP, 13=Extended Kanji Jis, 14=KS C 5601  Default 0
+coding = 0
 enquire_link_interval = 30
 replace_if_present_flag = 0
-dlr_msgid = 0 # Indicates how to read msg id when receiving a receipt: 0=msg id is identical in submit_sm_resp and deliver_sm, 1=submit_sm_resp msg-id is in hexadecimal base, deliver_sm msg-id is in decimal base, 2=submit_sm_resp msg-id is in decimal base, deliver_sm msg-id is in hexadecimal base.
+# Indicates how to read msg id when receiving a receipt: 0=msg id is identical in submit_sm_resp and deliver_sm, 1=submit_sm_resp msg-id is in hexadecimal base, deliver_sm msg-id is in decimal base, 2=submit_sm_resp msg-id is in decimal base, deliver_sm msg-id is in hexadecimal base.
+dlr_msgid = 0
 disabled = 0
 
 [filter:tag_filter1]
