--- a/resources/smpp.conf
+++ b/resources/smpp.conf
@@ -1,3 +1,11 @@
+[mq]
+host = 127.0.0.1
+port = 5672
+user = guest
+password = guest
+# vhost = /
+heartbeat_interval = 30
+
 
 [smpp_bind:smpp_conn1]
 host = 127.0.10.1
