--- a/resources/smpp.conf
+++ b/resources/smpp.conf
@@ -6,6 +6,9 @@ password = guest
 # vhost = /
 heartbeat_interval = 30
 
+[smpp_client]
+url = http://localhost:8081
+
 
 [smpp_bind:smpp_conn1]
 host = 127.0.10.1
