Added start to dlr poster

--- a/resources/smpp.conf
+++ b/resources/smpp.conf
@@ -66,16 +66,15 @@ type = destaddr
 regex = ^44.+
 
 
-[mt_route:20]
-type = static
-connector = smpp_conn3
-filters = tag_filter
+# [mt_route:20]
+# type = static
+# connector = smpp_conn3
+# filters = tag_filter
 
-
-[mt_route:10]
-type = static
-connector = smpp_conn2
-filters = uk_addr,tag_filter2
+# [mt_route:10]
+# type = static
+# connector = smpp_conn2
+# filters = uk_addr,tag_filter2
 
 [mt_route:0]
 type = default
