--- a/resources/smpp.conf
+++ b/resources/smpp.conf
@@ -1,10 +1,8 @@
-[mq]
-host = 127.0.0.1
-port = 5672
-user = guest
-password = guest
-# vhost = /
-heartbeat_interval = 30
+[sqs]
+# prefix =
+# endpoint =
+use_fifo = true
+region = eu-west-1
 
 [smpp_client]
 url = http://localhost:8081
@@ -50,6 +48,7 @@ replace_if_present_flag = 0
 # Indicates how to read msg id when receiving a receipt: 0=msg id is identical in submit_sm_resp and deliver_sm, 1=submit_sm_resp msg-id is in hexadecimal base, deliver_sm msg-id is in decimal base, 2=submit_sm_resp msg-id is in decimal base, deliver_sm msg-id is in hexadecimal base.
 dlr_msgid = 0
 disabled = 0
+# queue_name = test   # used to have multiple smpp connections read from the same queue
 
 [filter:tag_filter1]
 type = tag
