Initial exponential backoff

--- a/resources/smpp.conf
+++ b/resources/smpp.conf
@@ -1,7 +1,10 @@
 [sqs]
 # prefix =
 # endpoint =
-use_fifo = true
+use_fifo_for_sms_queues = true
+# FYI if you do fifo on DLR, you cannot set message timeouts so
+use_fifo_for_dlr = false
+use_fifo_for_mo = false
 region = eu-west-1
 
 [smpp_client]
