--- a/resources/smpp.conf
+++ b/resources/smpp.conf
@@ -81,3 +81,9 @@ regex = ^44.+
 [mt_route:0]
 type = default
 connector = smpp_conn1
+
+[mo_route:0]
+type = default
+url = http://localhost:8123/sms/mo
+# type can be form or json
+type = form
