--- a/resources/smpp.conf
+++ b/resources/smpp.conf
@@ -1,3 +1,4 @@
+# ====================================== SQS MQ ======================================
 [sqs]
 # prefix =
 # endpoint =
@@ -7,9 +8,15 @@ use_fifo_for_dlr = false
 use_fifo_for_mo = false
 region = eu-west-1
 
+
+
+# ====================================== TODO ======================================
 [smpp_client]
 url = http://localhost:8081
 
+
+
+# ====================================== SMPP Binds ======================================
 [smpp_bind:smpp_conn1]
 host = 127.0.10.1
 port = 2775
@@ -53,6 +60,9 @@ dlr_msgid = 0
 disabled = 0
 # queue_name = test   # used to have multiple smpp connections read from the same queue
 
+
+
+# ====================================== Filters ======================================
 [filter:tag_filter1]
 type = tag
 tag = 1337
@@ -68,6 +78,8 @@ type = destaddr
 regex = ^44.+
 
 
+
+# ====================================== MT Routes ======================================
 # [mt_route:20]
 # type = static
 # connector = smpp_conn3
@@ -82,8 +94,18 @@ regex = ^44.+
 type = default
 connector = smpp_conn1
 
+
+
+# ====================================== MO Routes ======================================
 [mo_route:0]
 type = default
 url = http://localhost:8123/sms/mo
 # type can be form or json
-type = form
+response_type = form
+
+
+
+# ====================================== MT Interceptor ======================================
+[mt_interceptor:100]
+script = resources/interceptor/standard_npi.py
+filters = uk_addr
