Added Smart roundrobin routes

--- a/resources/smpp.conf
+++ b/resources/smpp.conf
@@ -81,6 +81,11 @@ regex = ^44.+
 
 # ====================================== MT Routes ======================================
 # [mt_route:20]
+# type = smartrr
+# connectors = smpp_conn3,smpp_conn2
+# filters = tag_filter
+
+# [mt_route:20]
 # type = static
 # connector = smpp_conn3
 # filters = tag_filter
